--- a/src/sign_in_style_sheet.css
+++ b/src/sign_in_style_sheet.css
@@ -1,9 +1,27 @@
+#heading {
+    text-align: center;
+    width: 100%;
+    margin-top: 100px;
+    color: rgb(145, 12, 12);
+}
+
 #content {
     position: absolute;
+    display: flex;
+    gap: 50px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+#loginPhoto {
+    width: 500px;
+    height: 500px;
+}
+
+#inputs {
+    margin: auto;
 }
 
 h1 {
